# MiniatureSmartVehicle

./: README.md
sources/: infrared.ino
sources/OpenDaVINCI-msv/: Data.odvd  PandaBoard-Toolchain.cmake
sources/OpenDaVINCI-msv/apps/: CMakeLists.txt
sources/OpenDaVINCI-msv/apps/driver/include/: Driver.h
sources/OpenDaVINCI-msv/apps/driver/src/: Driver.cpp
sources/OpenDaVINCI-msv/apps/lanedetector/: CMakeLists.txt
sources/OpenDaVINCI-msv/apps/lanedetector/include/: LaneDetector.h  Lines.h
sources/OpenDaVINCI-msv/apps/lanedetector/src/: LaneDetector.cpp  Lines.cpp
sources/OpenDaVINCI-msv/apps/overtaker/: CMakeLists.txt
sources/OpenDaVINCI-msv/apps/overtaker/apps/: MainModule.cpp
sources/OpenDaVINCI-msv/apps/overtaker/include/: Overtaker.h
sources/OpenDaVINCI-msv/apps/overtaker/src/: Overtaker.cpp
sources/OpenDaVINCI-msv/apps/overtaker/testsuites/: OvertakerTestSuite.h
sources/OpenDaVINCI-msv/apps/parker/include/: Parker.h
sources/OpenDaVINCI-msv/apps/parker/src/: Parker.cpp
sources/OpenDaVINCI-msv/apps/proxy/: CMakeLists.txt
sources/OpenDaVINCI-msv/apps/proxy/include/: OpenCVCamera.h  Proxy.h  RunningMedian.h
sources/OpenDaVINCI-msv/apps/proxy/src/: OpenCVCamera.cpp  Proxy.cpp  RunningMedian.cpp
sources/OpenDaVINCI-msv/hesperia/Scenarios/: ObstacleInFirstCurve2.scnx
sources/OpenDaVINCI-msv/supercomponent/: configuration
